# ebm4subjects

./: .gitignore  README.md  dvc.yaml  environment.yaml  environment.yml  params.yaml  pyproject.toml  scratch_book.ipynb
.dvc/: config
assets/: .gitignore  gnd-label-distribution.arrow.dvc
corpora/: .gitignore  ft30k.dvc  ground-truth.arrow.dvc
corpora/ft30k/: .gitignore  test.arrow.dvc  test.tsv.gz.dvc  train.arrow.dvc  train.tsv.gz.dvc  validate.arrow.dvc  validate.tsv.gz.dvc
corpora/ftoa/: .gitignore  test.arrow.dvc  test.tsv.gz.dvc  train.arrow.dvc  train.tsv.gz.dvc  validate.arrow.dvc  validate.tsv.gz.dvc
docs/source/: conf.py
ebm4subjects/: chunker.py  duckdb_client.py  ebm_model.py  embedding_generator.py  prepare_data.py
results/test/: .gitignore  collection_name.txt  f1_at_5.json  pr_auc.json  prec_at_5.json  predictions2.arrow  rec_at_5.json  rprec_at_5.json
results/train/: .gitignore  collection_name.txt
results/validate/: .gitignore  collection_name.txt  f1_at_5.json  pr_auc.json  prec_at_5.json  rec_at_5.json  rprec_at_5.json
src/: chunk_texts.py  compute_metrics.r  create_collection.py  create_vocab_collection.py  create_vocab_embeddings.py  duckdb_client.py  embed_chunks.py  extract_pref_labels.r  generate_embeddings.py  index_corpus.py  predict.py  predict.r  prepare_data_for_gbm.py  prepare_data_for_gbm.r  qualitative-eval.r  train.py  train.r
src/ebm4subjects/: analyzer.py  chunker.py  duckdb_client.py  ebm_logging.py  ebm_model.py  embedding_generator.py  prepare_data.py
vocab/: .gitignore  gnd.ttl.dvc
