[project]
name = "ebm4subjects"
version = "0.2.4"
description = ""
authors = [
    {name = "Clemens Rietdorf", email = "c.rietdorf@dnb.de"},
    {name = "Maximilian Kähler", email = "m.kaehler@dnb.de"}
]

readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "flash-attn>=2.8.2",
    "joblib~=1.5.1",
    "nltk~=3.9.1",
    "numpy~=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "pyoxigraph>=0.4.11",
    "sentence-transformers>=5.0.0",
    "xgboost>=3.0.2",
    "rdflib~=7.1.3",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[project.scripts]
test = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
