[project]
name = "ebm4subjects"
version = "0.3.0"
description = "Automated subject indexing tool"
authors = [
    {name = "Clemens Rietdorf", email = "c.rietdorf@dnb.de"},
    {name = "Maximilian Kähler", email = "m.kaehler@dnb.de"}
]
license = "EUPL-1.2"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "flash-attn>=2.8.2",
    "nltk~=3.9.1",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "pyoxigraph>=0.4.11",
    "rdflib~=7.1.3",
    "sentence-transformers>=5.0.0",
    "xgboost>=3.0.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
